--- a/kaede2nd/kaede2nd.csproj
+++ b/kaede2nd/kaede2nd.csproj
@@ -112,6 +112,12 @@
     <Compile Include="MyForm.Designer.cs">
       <DependentUpon>MyForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyItemFormBase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyItemFormBase.Designer.cs">
+      <DependentUpon>MyItemFormBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Printing.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -145,6 +151,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm.resx">
       <DependentUpon>MyForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyItemFormBase.resx">
+      <DependentUpon>MyItemFormBase.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ReceiptForm.resx">
       <DependentUpon>ReceiptForm.cs</DependentUpon>
