返金系いろいろ
git-svn-id: http://svn.local/svnroot/ennichi/trunk/kaede2nd@145 1f740167-d0ba-4b02-8f16-c7307cbaec5e

--- a/kaede2nd/kaede2nd.csproj
+++ b/kaede2nd/kaede2nd.csproj
@@ -79,6 +79,12 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Entity\Operator.cs" />
+    <Compile Include="GassanForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GassanForm.Designer.cs">
+      <DependentUpon>GassanForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Globals.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -160,6 +166,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form_ItemList.resx">
       <DependentUpon>Form_ItemList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GassanForm.resx">
+      <DependentUpon>GassanForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HenkinForm.resx">
       <DependentUpon>HenkinForm.cs</DependentUpon>
