--- a/kaede2nd/kaede2nd.csproj
+++ b/kaede2nd/kaede2nd.csproj
@@ -69,6 +69,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppConfig.cs" />
+    <Compile Include="Dao\IConfigDao.cs" />
+    <Compile Include="Entity\ConfigEntity.cs" />
     <Compile Include="Dao\IExternalDao.cs" />
     <Compile Include="Dao\IItemDao.cs" />
     <Compile Include="Dao\IOperatorDao.cs" />
