近日実装とかいろいろ
git-svn-id: http://svn.local/svnroot/ennichi/trunk/kaede2nd@154 1f740167-d0ba-4b02-8f16-c7307cbaec5e

--- a/kaede2nd/kaede2nd.csproj
+++ b/kaede2nd/kaede2nd.csproj
@@ -71,6 +71,7 @@
   <ItemGroup>
     <Compile Include="AppConfig.cs" />
     <Compile Include="Dao\IConfigDao.cs" />
+    <Compile Include="DbConfig.cs" />
     <Compile Include="Entity\ConfigEntity.cs" />
     <Compile Include="Dao\IItemDao.cs" />
     <Compile Include="Dao\IOperatorDao.cs" />
