Microsoft SQL Server に対応 (Thanks shugonta)
git-svn-id: http://svn.local/svnroot/ennichi/trunk/kaede2nd@171 1f740167-d0ba-4b02-8f16-c7307cbaec5e

--- a/kaede2nd/kaede2nd.csproj
+++ b/kaede2nd/kaede2nd.csproj
@@ -244,7 +244,6 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="app.config" />
-    <EmbeddedResource Include="Dao.dicon" />
     <EmbeddedResource Include="RecentItem.resx">
       <DependentUpon>RecentItem.cs</DependentUpon>
     </EmbeddedResource>
@@ -345,6 +344,8 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Dao_mssql.dicon" />
+    <EmbeddedResource Include="Dao_mysql.dicon" />
     <None Include="ennichi58_logo.png" />
     <Content Include="mysqldump.exe">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
